@@ -8,6 +8,7 @@ import gettext
 import tempfile
 import os
 import webbrowser
+from tryton.pyson import PYSONEncoder
 from tryton.common import RPCProgress, RPCExecute, RPCException
 
 _ = gettext.gettext
@@ -172,3 +173,33 @@ class Action(object):
         elif not len(keyact) and warning:
             message(_('No action defined!'))
         return False
+
+    @staticmethod
+    def evaluate(action, atype, record):
+        '''
+        Evaluate the action with the record.
+        '''
+        action = action.copy()
+        if atype in ('print', 'action'):
+            email = {}
+            if 'pyson_email' in action:
+                email = record.expr_eval( action['pyson_email'])
+                if not email:
+                    email = {}
+            if 'subject' not in email:
+                email['subject'] = action['name'].replace('_', '')
+            action['email'] = email
+        elif atype == 'relate':
+            encoder = PYSONEncoder()
+            if 'pyson_domain' in action:
+                action['pyson_domain'] = encoder.encode(
+                    record.expr_eval(action['pyson_domain'], check_load=False))
+            if 'pyson_context' in action:
+                action['pyson_context'] = encoder.encode(
+                    record.expr_eval(action['pyson_context'],
+                        check_load=False))
+
+        else:
+            raise NotImplementedError("Action type '%s' is not supported" %
+                atype)
+        return action
