@@ -1,3 +1,7 @@
+* Improve contextual menu:
+    - Actions for all relation fields on list view
+    - Use icons
+    - Add attachments entry
 * Use RPCProgress almost everywhere
 * Add a simple search box
 * New domain parser using shlex
